2002-02-08  Ryan Nunn  <triforce@merlin.net.au>
	* server/servewin32.cc : Fixed the GetLongPathName issue. Exult and
	  Exult Studio both need to be recompiled, because this effects 
	  communications.

2002-02-07  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode/ucinternal.cc: Removed open of static/flaginit.dat.

	* shapes/shapewrite.cc: Use num_shapes, not 1024.
	* mapedit/studio.cc:  Fixed ::write_shape_info().
	* mapedit/shapefile.cc:  Compare filenames ignoring case.

2002-02-05  Max Horn  <max@quendi.de>

	* server/servemsg.cc: changed to fix building over here

2002-02-03  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/shapelst.cc: Optional 'Frames' view shows all the frames
	for all shapes, one shape per row.  (Might still need to add a
	horiz. scrollbar for this.)

2002-02-03  Max Horn  <max@quendi.de>
	* audio, conf, files: replaced local versions with those from common module
	* usecode/ucxt/Makefile.am: fixed (head2data.test isn't an app target)

2002-02-03  Darke  <darkepaw@users.sourceforge.net>
	* audio/Audio.cc, mapedit/shapelst.h: Namespaces.
	* usecode/ucxt/*: Code cleanup & optimisations.

2002-02-02  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Don't call 'unreadied' usecode if Actor is dead.
	This caused hangs when getting Black Sword in Mtns. of Freedom.

2002-01-30  Ryan Nunn  <triforce@merlin.net.au>
	* sigame.cc : Added the thunder sfx to intro. Clear the screen between
	  the flics to prevent palette corruption.
	* audio/Audio.cc : Handle voc chunk type '5' as a text message. Also
	  added 4bit ADPCM VOC decompression for the SI intro thunder SFX.
	  Code obtained from VDMS.

2002-01-28  Jeff Freedman  <jeff@amy.nerble.net>

	* mapedit/chunklst.cc,etc:  'Groups' work for 'u7chunks' now.

2002-01-28  Ryan Nunn  <triforce@merlin.net.au>
	* sigame.cc : Reworking SI endgame. Now has correct timing and speech.
	  Text message for when speech is disabled is yet to be included.